First_Step/data/44/50/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Scores.java:28: error: ']' expected
        int[] podium = int[3];
                           ^
Scores.java:28: error: ';' expected
        int[] podium = int[3];
                            ^
2 errors
Not compiled
--|>
Grade :=>>0.00000
